[gd_scene load_steps=8 format=3 uid="uid://bighrhqoiqnx2"]

[ext_resource type="Script" path="res://Terrain/Blocks/DestructibleBlock/rock_01/multi_rock.gd" id="1_g13g4"]
[ext_resource type="Script" path="res://Terrain/Blocks/DestructibleBlock/DestructibleBlock.gd" id="2_ah5m6"]
[ext_resource type="PackedScene" uid="uid://bdrtph82cn6uv" path="res://Terrain/Blocks/BaseBlock/base_block.tscn" id="3_hgi6g"]
[ext_resource type="PackedScene" uid="uid://2acr77uy2qy8" path="res://Rock/rock_04_A_visual.tscn" id="4_15n25"]
[ext_resource type="PackedScene" path="res://Rock/rock_04_B_visual.tscn" id="5_epn0e"]
[ext_resource type="PackedScene" path="res://Rock/rock_04_C_visual.tscn" id="6_d2id0"]
[ext_resource type="PackedScene" path="res://Rock/rock_04_D_visual.tscn" id="7_ocd0s"]

[node name="Rock04" type="Node2D" node_paths=PackedStringArray("list_of_rocks", "destructible_rock")]
script = ExtResource("1_g13g4")
list_of_rocks = [NodePath("Rock_Visual"), NodePath("Rock_Visual2"), NodePath("Rock_Visual3"), NodePath("Rock_Visual4")]
destructible_rock = NodePath("DestructibleBlock")

[node name="DestructibleBlock" type="Node2D" parent="." node_paths=PackedStringArray("base_block", "rock_visual")]
script = ExtResource("2_ah5m6")
base_block = NodePath("../BaseBlock")
rock_visual = NodePath("../Rock_Visual")

[node name="BaseBlock" parent="." instance=ExtResource("3_hgi6g")]
health = 5
enable_debug_visual = false

[node name="Rock_Visual" parent="." instance=ExtResource("4_15n25")]

[node name="Rock_Visual2" parent="." instance=ExtResource("5_epn0e")]
visible = false

[node name="Rock_Visual3" parent="." instance=ExtResource("6_d2id0")]
visible = false

[node name="Rock_Visual4" parent="." instance=ExtResource("7_ocd0s")]
visible = false

[connection signal="onDestroy" from="DestructibleBlock" to="." method="_on_destructible_block_on_destroy"]
[connection signal="hitReceived" from="BaseBlock" to="DestructibleBlock" method="_on_base_block_hit_received"]
